# LinkedIn_Jobs_Research_AI_Agent

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml
models/: job_schema.py
pipeline/: analyst_agent.py  parser_agent.py  report_agent.py  scraper_agent.py
sample_output/: linkedin_jobs_report.md
tools/: browser_tool.py  chart_tool.py  parser_tool.py
